# nanoGPT

./: .gitignore  ddp.py  ddp.slurm  distributed_training.py  license.md  nanogpt.py  nanogpt_kv_cache.py  pyproject.toml  readme.md  tutorial.ipynb
.github/workflows/: build_env_run_tests.yml
data/: tiny_austen_tokens.txt
ddp_and_fsdp/: ddp.py  ddp.slurm  fsdp.py  fsdp.slurm
tests/: test_nanogpt.py
